[tool.poetry]
name = "mcgen"
version = "0.2.0"
description = "Python utilities for downloading and processing Minecraft's generated data."
authors = ["Arcensoth <arcensoth@gmail.com>"]
license = "MIT"
readme = 'README.md'
repository = "https://github.com/Arcensoth/mcgen"
homepage = "https://github.com/Arcensoth/mcgen"
keywords = ['minecraft', 'data', 'mcdata', 'mcgen']

[tool.poetry.dependencies]
python = "^3.8"
colorama = {version = "^0.4.3", optional = true}
colorlog = {version = "^4.2.1", optional = true}

[tool.poetry.dev-dependencies]
black = "^21.5b0"
isort = "^5.8.0"
rope = "^0.19.0"

[tool.poetry.extras]
colors = ["colorama", "colorlog"]

[tool.isort]
profile = "black"

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
